--- a/CarRentSystem/Views/Home/Index.cshtml
+++ b/CarRentSystem/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model List<Car>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <h2>Samochody:</h2>
+    <ul>
+        @foreach (var car in Model)
+        {
+            <li>@car.brand - @car.model</li>
+        }
+    </ul>
 </div>
